opam-version: "2.0"
synopsis: "HPACK implementation in OCaml"
maintainer: "Pieter Goetschalckx <3.14.e.ter@gmail.com>"
authors: ["Pieter Goetschalckx <3.14.e.ter@gmail.com>"]
homepage: "https://github.com/314eter/ocaml-hpack"
license: "MIT"
dev-repo: "git+https://github.com/314eter/ocaml-hpack.git"
bug-reports: "https://github.com/314eter/ocaml-hpack/issues"
depends: [
  "ocaml" {>= "4.07"}
  "dune" {build}
  "yojson" {with-test}
  "hex" {with-test}
  "crowbar" {with-test}
  "odoc" {with-doc}
  "angstrom"
  "faraday"
]
build: [
  ["dune" "build" "-p" name "-j" jobs] {with-test}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
