(library
  (public_name hpack)
  (modules s dynamic_table huffman_table static_table huffman decoder encoder hpack)
  (preprocess (pps ppx_let)))

(library
  (name hpack_lwt)
  (public_name hpack-lwt)
  (modules hpack_lwt)
  (libraries hpack lwt lwt.unix))

(library
  (name hpack_async)
  (public_name hpack-async)
  (modules hpack_async)
  (libraries hpack async_kernel async_unix))

(rule
  (targets huffman_table.ml)
  (deps ../util/huffman_table.txt)
  (action (run ../util/gen_huffman.exe %{deps} %{targets})))

(rule
  (targets static_table.ml)
  (deps ../util/static_table.txt)
  (action (run ../util/gen_static.exe %{deps} %{targets})))
