(library
  (public_name hpack)
  (modules s dynamic_table huffman_table static_table huffman decoder encoder hpack)
  (libraries angstrom faraday)
  (preprocess (pps ppx_let)))

(rule
  (targets huffman_table.ml)
  (deps ../util/huffman_table.txt)
  (action (run ../util/gen_huffman.exe %{deps} %{targets})))

(rule
  (targets static_table.ml)
  (deps ../util/static_table.txt)
  (action (run ../util/gen_static.exe %{deps} %{targets})))
