(library
  (public_name hpack)
  (libraries angstrom faraday)
  (preprocess future_syntax))

(rule
  (targets huffman_table.ml)
  (deps ../util/huffman_table.txt)
  (action (run ../util/gen_huffman.exe %{deps} %{targets})))

(rule
  (targets static_table.ml)
  (deps ../util/static_table.txt)
  (action (run ../util/gen_static.exe %{deps} %{targets})))
